content needs to be aligned correctly in our results section

--- a/2-styles.css
+++ b/2-styles.css
@@ -179,6 +179,46 @@ button {
   height: 190px;
 }
 
+.our-results {
+  background: url('images/background-middle.png');
+  height: 650px;
+}
+
+.or-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  margin-top: 141px;
+}
+
+.or-content h3 {
+  font-size: 46px;
+  line-height: 26px;
+  font-weight: 700;
+}
+
+.or-main-p {
+  max-width: 637px;
+}
+
+.or-content .icon p {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.polygon {
+  /* margin-top: 200px; */
+  position: absolute;
+}
+
+.polygon-text {
+  position: absolute;
+  /* margin-bottom: 300px; */
+}
 /*  */
 /* Tablet */
 /*  */
